...
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:text="Enter Admin Pin"
    />
    <EditText
            android:id="@+id/username"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
...
