...
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:backgroundTint="@color/teal_200"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_phone_charge"
                android:background="@color/white"
                android:id="@+id/dockmode"
                android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayoutBt"
            app:layout_constraintHeight_percent="1"
...
