...
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

            <ImageButton
                    android:layout_marginBottom="40dp"
                    android:id="@+id/btnDebug"
                    android:background="@null"
                    android:layout_height="50dp"
                    android:layout_width="50dp" />
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
...
