...
                        app:ss_switchColor="#4C7994"
                        app:ss_textColor="@color/black"
                        app:ss_textSize="12sp"
                        app:ss_animationType="line" />

                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/btnChangeMode"
                        android:layout_width="200dp"
                        android:text="Switch Mode"
                        style="@style/loginButton"
                        android:textStyle="normal"
                        android:layout_marginTop="20dp"
                        app:spinning_bar_width="4dp"
...
